--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Richard Ryan</title>
-  <meta name="title" content="Richard Ryan">
-  <meta name="description" content="This is a photographer portfolio html template, made by codewithsadee.">
+  <title>DNT</title>
+  <meta name="title" content="DNT">
+  <meta name="description" content="This is the official DNT website">
 
   <!-- 
     - favicon
@@ -59,7 +59,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.svg" width="40" height="40" alt="Richard home">
+        <img src="./assets - Copy/DNT Logo Remastered White.png" width="40" height="40" alt="DNT">
       </a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
@@ -70,7 +70,7 @@
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/nav-logo.svg" width="140" height="40" alt="Richard home" class="img">
+            <img src="./assets/images/nav-logo.svg" width="140" height="40" alt="DNT Home" class="img">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -86,7 +86,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#gallery" class="navbar-link" data-nav-link>Gallery</a>
+            <a href="#gallery" class="navbar-link" data-nav-link>Our bots</a>
           </li>
 
           <li class="navbar-item">
@@ -107,21 +107,16 @@
 
         </ul>
 
-        <button class="login-btn">
-          <img src="./assets/images/user.svg" width="21" height="21" alt="user icon">
 
-          <span class="span">Login</span>
-        </button>
-
-        <p class="navbar-title">My Address</p>
+        <p class="navbar-title">Our Address</p>
 
         <address class="navbar-text">
-          3287 Indiana Avenue, Waialua, Hawaii
+          VIT Chennai, Kelambakkam, TN, 600127, India
         </address>
 
         <p class="navbar-text">
-          Urgent issue? call us at
-          <a href="tel:8085613846" class="contact-link">808-561-3846</a>
+          Urgent issue? mail us at
+          <a href="email:admin@dreadnoughtrobotics.co.in" class="contact-link">admin@dreadnoughtrobotics.co.in</a>
         </p>
 
       </nav>
@@ -149,16 +144,16 @@
 
           <div class="hero-content">
 
-            <h1 class="h1 hero-title">Richard Ryan</h1>
+            <h1 class="h1 hero-title">Dreadnought Robotics</h1>
 
             <div class="wrapper h2">
-              <strong class="strong" data-letter-effect>Photographer</strong>
-              <strong class="strong" data-letter-effect>Shutterbug</strong>
-              <strong class="strong" data-letter-effect>Cameraman</strong>
-              <strong class="strong" data-letter-effect>Pacific Portraits</strong>
+              
+              <strong class="strong" data-letter-effect>Inspirations</strong>
+              <strong class="strong" data-letter-effect>Learning</strong>
+              <strong class="strong" data-letter-effect>Experiences</strong>
             </div>
 
-            <p class="hero-text">15+ Years Of Experience</p>
+            <p class="hero-text">Fear Not Strive Forth</p>
 
           </div>
 
