--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets - Copy/DNT Logo Remastered White.png" width="40" height="40" alt="DNT">
+        <img src="./assets/DNT Logo Remastered White.png" width="80" height="80" alt="DNT">
       </a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
@@ -140,7 +140,7 @@
       <section class="section hero" id="home" aria-label="home">
         <div class="container">
 
-          <img src="./assets/images/hero-banner.png" width="322" height="322" alt="" class="hero-banner">
+          <img src="./assets/Untitled design.png" width="322" height="322" alt="" class="hero-banner">
 
           <div class="hero-content">
 
