--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/images/loading.svg">
-  <link rel="preload" as="image" href="./assets/images/loading-circle.svg">
+  <link rel="preload" as="image" href="./assets/DNT Logo Remastered White.png">
+  <link rel="preload" as="image" href="./assets/DNT Logo Remastered White.png">
 
 </head>
 
@@ -140,7 +140,7 @@
       <section class="section hero" id="home" aria-label="home">
         <div class="container">
 
-          <img src="./assets/Untitled design.png" width="322" height="322" alt="" class="hero-banner">
+          <img src="./assets/Untitled design.png" width="450" height="450" alt="" class="hero-banner">
 
           <div class="hero-content">
 
