--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/DNT Logo Remastered White.png">
-  <link rel="preload" as="image" href="./assets/DNT Logo Remastered White.png">
+  <link rel="preload" as="image" href="./assets/images/loading.svg">
+  <link rel="preload" as="image" href="./assets/images/loading-circle.svg">
 
 </head>
 
@@ -43,7 +43,7 @@
   -->
 
   <div class="loading" data-loading>
-    <img src="./assets/images/loading.png" width="55" height="55" alt="loading" class="img">
+    <img src="./assets/images/loading.svg" width="55" height="55" alt="loading" class="img">
     <img src="./assets/images/loading-circle.svg" width="70" height="70" alt="" class="circle">
   </div>
 
@@ -140,7 +140,7 @@
       <section class="section hero" id="home" aria-label="home">
         <div class="container">
 
-          <img src="./assets/Untitled design.png" width="450" height="450" alt="" class="hero-banner">
+          <img src="./assets/Untitled design.png" width="380" height="450" alt="" class="hero-banner">
 
           <div class="hero-content">
 
@@ -181,16 +181,16 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder has-before" style="--width: 450; --height: 625;">
-                  <img src="./assets/images/gallery-1.jpg" width="450" height="625" loading="lazy" alt="The Drunken"
+                  <img src="./assets/dntppl.jpg" width="450" height="625" loading="lazy" alt="The Drunken"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h6">
-                    <a href="#" class="card-title">The Drunken</a>
+                    <a href="#" class="card-title">AUV</a>
                   </h3>
 
-                  <span class="card-tag">Food, Event</span>
+                  <span class="card-tag">signature Bot</span>
                 </div>
 
                 <a href="#" class="btn-icon">
@@ -203,16 +203,16 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder has-before" style="--width: 450; --height: 625;">
-                  <img src="./assets/images/gallery-2.jpg" width="450" height="625" loading="lazy"
+                  <img src="./assets/auv des.png" width="450" height="625" loading="lazy"
                     alt="Lettuce Entertain" class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h6">
-                    <a href="#" class="card-title">Lettuce Entertain</a>
+                    <a href="#" class="card-title">AUV</a>
                   </h3>
 
-                  <span class="card-tag">Landscape</span>
+                  <span class="card-tag">Signature Bot</span>
                 </div>
 
                 <a href="#" class="btn-icon">
@@ -229,16 +229,16 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder has-before" style="--width: 450; --height: 625;">
-                  <img src="./assets/images/gallery-3.jpg" width="450" height="625" loading="lazy" alt="Leaping Lizard"
+                  <img src="./assets/arm.png" width="450" height="625" loading="lazy" alt="Leaping Lizard"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h6">
-                    <a href="#" class="card-title">Leaping Lizard</a>
+                    <a href="#" class="card-title">Robotic Arm</a>
                   </h3>
 
-                  <span class="card-tag">Model, Fashion</span>
+                  <span class="card-tag">3DOF</span>
                 </div>
 
                 <a href="#" class="btn-icon">
@@ -251,16 +251,16 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder has-before" style="--width: 450; --height: 625;">
-                  <img src="./assets/images/gallery-4.jpg" width="450" height="625" loading="lazy" alt="Juan More Taco"
+                  <img src="./assets/arm des.png" width="450" height="625" loading="lazy" alt="Juan More Taco"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h6">
-                    <a href="#" class="card-title">Juan More Taco</a>
+                    <a href="#" class="card-title">Robotic Arm</a>
                   </h3>
 
-                  <span class="card-tag">Architecture, Event</span>
+                  <span class="card-tag">3DOF</span>
                 </div>
 
                 <a href="#" class="btn-icon">
@@ -277,16 +277,16 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder has-before" style="--width: 450; --height: 625;">
-                  <img src="./assets/images/gallery-5.jpg" width="450" height="625" loading="lazy" alt="Goldilox Bagels"
+                  <img src="./assets/drone.png" width="450" height="625" loading="lazy" alt="Goldilox Bagels"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h6">
-                    <a href="#" class="card-title">Goldilox Bagels</a>
+                    <a href="#" class="card-title">Drone</a>
                   </h3>
 
-                  <span class="card-tag">People, Film</span>
+                  <span class="card-tag">Flight</span>
                 </div>
 
                 <a href="#" class="btn-icon">
@@ -299,16 +299,16 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder has-before" style="--width: 450; --height: 625;">
-                  <img src="./assets/images/gallery-6.jpg" width="450" height="625" loading="lazy" alt="Cookie Monstah"
+                  <img src="./assets/drone des.png" width="450" height="625" loading="lazy" alt="Cookie Monstah"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h6">
-                    <a href="#" class="card-title">Cookie Monstah</a>
+                    <a href="#" class="card-title">Drone</a>
                   </h3>
 
-                  <span class="card-tag">Wedding, Event</span>
+                  <span class="card-tag">Flight</span>
                 </div>
 
                 <a href="#" class="btn-icon">
