--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             <li class="category-item" data-reveal>
               <a href="#" class="category-card">
 
-                <h3 class="h4 card-title">Landscape,</h3>
+                <h3 class="h4 card-title">Robotics</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
                   <img src="./assets/images/category-1.jpg" width="600" height="690" loading="lazy" alt="Landscape"
@@ -408,7 +408,7 @@
             <li class="category-item" data-reveal>
               <a href="#" class="category-card">
 
-                <h3 class="h4 card-title">Model,</h3>
+                <h3 class="h4 card-title">Automation,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
                   <img src="./assets/images/category-2.jpg" width="600" height="690" loading="lazy" alt="Model"
@@ -421,7 +421,7 @@
             <li class="category-item" data-reveal>
               <a href="#" class="category-card">
 
-                <h3 class="h4 card-title">Street,</h3>
+                <h3 class="h4 card-title">Artificial Intelligence,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
                   <img src="./assets/images/category-3.jpg" width="600" height="690" loading="lazy" alt="Street"
@@ -434,7 +434,7 @@
             <li class="category-item" data-reveal>
               <a href="#" class="category-card">
 
-                <h3 class="h4 card-title">Product,</h3>
+                <h3 class="h4 card-title">Sensors,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
                   <img src="./assets/images/category-4.jpg" width="600" height="690" loading="lazy" alt="Product"
@@ -447,7 +447,7 @@
             <li class="category-item" data-reveal>
               <a href="#" class="category-card">
 
-                <h3 class="h4 card-title">Fashion,</h3>
+                <h3 class="h4 card-title">Path Planning,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
                   <img src="./assets/images/category-2.jpg" width="600" height="690" loading="lazy" alt="Fashion"
@@ -460,7 +460,7 @@
             <li class="category-item" data-reveal>
               <a href="#" class="category-card">
 
-                <h3 class="h4 card-title">Film,</h3>
+                <h3 class="h4 card-title">Mapping,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
                   <img src="./assets/images/category-5.jpg" width="600" height="690" loading="lazy" alt="Film"
@@ -473,7 +473,7 @@
             <li class="category-item" data-reveal>
               <a href="#" class="category-card">
 
-                <h3 class="h4 card-title">Architecture,</h3>
+                <h3 class="h4 card-title">Computer Vision,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
                   <img src="./assets/images/category-6.jpg" width="600" height="690" loading="lazy" alt="Architecture"
@@ -486,7 +486,7 @@
             <li class="category-item" data-reveal>
               <a href="#" class="category-card">
 
-                <h3 class="h4 card-title">Event,</h3>
+                <h3 class="h4 card-title">Actuators,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
                   <img src="./assets/images/category-7.jpg" width="600" height="690" loading="lazy" alt="Event"
@@ -496,70 +496,19 @@
               </a>
             </li>
 
-            <li class="category-item" data-reveal>
-              <a href="#" class="category-card">
+              <li class="category-item" data-reveal>
+                <a href="#" class="category-card">
 
-                <h3 class="h4 card-title">Wedding,</h3>
+                  <h3 class="h4 card-title">ROS.</h3>
 
-                <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-8.jpg" width="600" height="690" loading="lazy" alt="Wedding"
-                    class="img-cover">
-                </figure>
+                  <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
+                    <img src="./assets/images/category-7.jpg" width="600" height="690" loading="lazy" alt="Event"
+                      class="img-cover">
+                  </figure>
 
-              </a>
-            </li>
+                </a>
+              </li>           
 
-            <li class="category-item" data-reveal>
-              <a href="#" class="category-card">
-
-                <h3 class="h4 card-title">People,</h3>
-
-                <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-9.jpg" width="600" height="690" loading="lazy" alt="People"
-                    class="img-cover">
-                </figure>
-
-              </a>
-            </li>
-
-            <li class="category-item" data-reveal>
-              <a href="#" class="category-card">
-
-                <h3 class="h4 card-title">Event,</h3>
-
-                <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-7.jpg" width="600" height="690" loading="lazy" alt="Event"
-                    class="img-cover">
-                </figure>
-
-              </a>
-            </li>
-
-            <li class="category-item" data-reveal>
-              <a href="#" class="category-card">
-
-                <h3 class="h4 card-title">Food,</h3>
-
-                <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-10.jpg" width="600" height="690" loading="lazy" alt="Food"
-                    class="img-cover">
-                </figure>
-
-              </a>
-            </li>
-
-            <li class="category-item" data-reveal>
-              <a href="#" class="category-card">
-
-                <h3 class="h4 card-title">Health & Wellnes.</h3>
-
-                <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-11.jpg" width="600" height="690" loading="lazy"
-                    alt="Health & Wellnes" class="img-cover">
-                </figure>
-
-              </a>
-            </li>
 
           </ul>
 
@@ -580,18 +529,18 @@
           <div class="about-content">
 
             <h2 class="h2 section-title" data-reveal="right">
-              Hi. I’m <br>
-              Richard Ryan
+              Hi. we’re <br>
+              Dreadnought Robotics
             </h2>
 
             <div class="wrapper has-before" data-reveal="right">
 
               <p class="section-text">
-                A passionate
-                <em class="em">photograher</em>
-                who are working in this field for
-                <em class="em">last 10 years.</em>
-                I’m ready to give you my best.
+                When bolts align and algorithms converge
+                <em class="em">magic</em>
+                happens. Our robotics crew is like a symphony of
+                <em class="em">precision</em>
+                and creativity.
               </p>
 
               <img src="./assets/images/signature.png" width="151" height="92" loading="lazy" alt="signature"
@@ -751,7 +700,7 @@
 
             <div class="wrapper">
 
-              <h2 class="h2 section-title" id="portfolio-label" data-reveal>My Recent Work.</h2>
+              <h2 class="h2 section-title" id="portfolio-label" data-reveal>Competitions we go to.</h2>
 
               <div class="portfolio-card" data-reveal>
 
