--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                   <span class="card-tag">Signature Bot</span>
                 </div>
 
-                <a href="#" class="btn-icon">
+                <a href="https://github.com/orgs/dreadnoughtrobotics/repositories" class="btn-icon">
                   <img src="./assets/images/arrow-forward.svg" width="43" height="20" loading="lazy"
                     alt="arrow-forward icon">
                 </a>
@@ -241,7 +241,7 @@
                   <span class="card-tag">3DOF</span>
                 </div>
 
-                <a href="#" class="btn-icon">
+                <a href="https://github.com/orgs/dreadnoughtrobotics/repositories" class="btn-icon">
                   <img src="./assets/images/arrow-forward.svg" width="43" height="20" loading="lazy"
                     alt="arrow-forward icon">
                 </a>
@@ -263,7 +263,7 @@
                   <span class="card-tag">3DOF</span>
                 </div>
 
-                <a href="#" class="btn-icon">
+                <a href="https://github.com/orgs/dreadnoughtrobotics/repositories" class="btn-icon">
                   <img src="./assets/images/arrow-forward.svg" width="43" height="20" loading="lazy"
                     alt="arrow-forward icon">
                 </a>
@@ -289,7 +289,7 @@
                   <span class="card-tag">Flight</span>
                 </div>
 
-                <a href="#" class="btn-icon">
+                <a href="https://github.com/orgs/dreadnoughtrobotics/repositories" class="btn-icon">
                   <img src="./assets/images/arrow-forward.svg" width="43" height="20" loading="lazy"
                     alt="arrow-forward icon">
                 </a>
@@ -325,19 +325,19 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder has-before" style="--width: 450; --height: 625;">
-                  <img src="./assets/images/gallery-7.jpg" width="450" height="625" loading="lazy"
+                  <img src="./assets/torpedo.jpg" width="450" height="625" loading="lazy"
                     alt="Divine Pastabilities" class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h6">
-                    <a href="#" class="card-title">Divine Pastabilities</a>
+                    <a href="#" class="card-title">Torpedo</a>
                   </h3>
 
-                  <span class="card-tag">Wedding, Model</span>
+                  <span class="card-tag">All terrain vehicle</span>
                 </div>
 
-                <a href="#" class="btn-icon">
+                <a href="https://github.com/orgs/dreadnoughtrobotics/repositories" class="btn-icon">
                   <img src="./assets/images/arrow-forward.svg" width="43" height="20" loading="lazy"
                     alt="arrow-forward icon">
                 </a>
@@ -347,19 +347,19 @@
               <div class="gallery-card">
 
                 <figure class="card-banner img-holder has-before" style="--width: 450; --height: 625;">
-                  <img src="./assets/images/gallery-8.jpg" width="450" height="625" loading="lazy"
+                  <img src="./assets/torpedo des.png" width="450" height="625" loading="lazy"
                     alt="The Lockhart Bar" class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h6">
-                    <a href="#" class="card-title">The Lockhart Bar</a>
+                    <a href="#" class="card-title">Torpedo</a>
                   </h3>
 
-                  <span class="card-tag">Health & Wellnes</span>
+                  <span class="card-tag">All terrain vehicle</span>
                 </div>
 
-                <a href="#" class="btn-icon">
+                <a href="https://github.com/orgs/dreadnoughtrobotics/repositories" class="btn-icon">
                   <img src="./assets/images/arrow-forward.svg" width="43" height="20" loading="lazy"
                     alt="arrow-forward icon">
                 </a>
