--- a/index.html
+++ b/index.html
@@ -699,24 +699,24 @@ the globe.
 
             <div class="wrapper">
 
-              <h2 class="h2 section-title" id="portfolio-label" data-reveal>Meet the team</h2>
+              <h2 class="h2 section-title" id="portfolio-label" data-reveal>Calypso Gallery</h2>
 
               <div class="portfolio-card" data-reveal>
 
                 <figure class="card-banner img-holder has-before" style="--width: 700; --height: 605;">
-                  <img src="./assets/images/portfolio-1.jpg" width="700" height="605" loading="lazy" alt="Shoe Promo"
+                  <img src="./assets/auv pic.png" width="700" height="605" loading="lazy" alt="Shoe Promo"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h4">
-                    <a href="#" class="card-title">Shoe Promo</a>
+                    <a href="#" class="card-title">Testing</a>
                   </h3>
 
-                  <p class="card-tag">Product</p>
+                  <p class="card-tag">Sample testing</p>
                 </div>
 
-                <a href="#" class="btn-icon" aria-label="See more">
+                <a href="https://github.com/dreadnoughtrobotics" class="btn-icon" aria-label="See more">
                   <svg xmlns="http://www.w3.org/2000/svg" width="43" height="20" viewBox="0 0 43 20" fill="none">
                     <path d="M0 10H41" stroke="black" stroke-width="2" />
                     <path d="M33 1L41.9 10.2727L33 19" stroke="black" stroke-width="2" />
@@ -728,19 +728,19 @@ the globe.
               <div class="portfolio-card" data-reveal>
 
                 <figure class="card-banner img-holder has-before" style="--width: 700; --height: 1091;">
-                  <img src="./assets/images/portfolio-2.jpg" width="700" height="1091" loading="lazy" alt="Wedding Shot"
+                  <img src="./assets/auv pic.png" width="700" height="1091" loading="lazy" alt="Wedding Shot"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h4">
-                    <a href="#" class="card-title">Wedding Shot</a>
+                    <a href="#" class="card-title">AUV pic</a>
                   </h3>
 
-                  <p class="card-tag">Wedding</p>
+                  <p class="card-tag">Sample gallery</p>
                 </div>
 
-                <a href="#" class="btn-icon" aria-label="See more">
+                <a href="https://github.com/dreadnoughtrobotics" class="btn-icon" aria-label="See more">
                   <svg xmlns="http://www.w3.org/2000/svg" width="43" height="20" viewBox="0 0 43 20" fill="none">
                     <path d="M0 10H41" stroke="black" stroke-width="2" />
                     <path d="M33 1L41.9 10.2727L33 19" stroke="black" stroke-width="2" />
