--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#services" class="navbar-link" data-nav-link>Services</a>
+            <a href="#competions" class="navbar-link" data-nav-link>Our competitions</a>
           </li>
 
           <li class="navbar-item">
-            <a href="#portfolio" class="navbar-link" data-nav-link>Portfolio</a>
+            <a href="#portfolio" class="navbar-link" data-nav-link>Calypso Gallery</a>
           </li>
 
           <li class="navbar-item">
@@ -159,7 +159,7 @@
 
         </div>
 
-        <img src="./assets/images/hero-shape.svg" width="211" height="189" alt="" class="shape">
+        <img src="./assets/vector side.png" width="211" height="189" alt="" class="shape">
 
       </section>
 
@@ -374,7 +374,7 @@
             <img src="./assets/images/scroll-down.svg" width="40" height="66" loading="lazy" alt="mouse scroll">
           </a>
 
-          <img src="./assets/images/gallery-shape.svg" width="220" height="78" loading="lazy" alt="" class="shape">
+          <img src="./assets/vector side.png" width="220" height="78" loading="lazy" alt="" class="shape">
 
         </div>
       </section>
@@ -388,6 +388,7 @@
       -->
 
       <section class="section category" aria-label="photography category">
+        <p class="section-subtitle container" id="service-lable">What we focus on?</p>
         <div class="container">
 
           <ul class="category-list">
@@ -398,7 +399,7 @@
                 <h3 class="h4 card-title">Robotics,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-1.jpg" width="600" height="690" loading="lazy" alt="Landscape"
+                  <img src="./assets/robotics.jpg" width="600" height="690" loading="lazy" alt="Landscape"
                     class="img-cover">
                 </figure>
 
@@ -411,7 +412,7 @@
                 <h3 class="h4 card-title">Automation,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-2.jpg" width="600" height="690" loading="lazy" alt="Model"
+                  <img src="./assets/automation.jpg" width="600" height="690" loading="lazy" alt="Model"
                     class="img-cover">
                 </figure>
 
@@ -424,7 +425,7 @@
                 <h3 class="h4 card-title">Artificial Intelligence,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-3.jpg" width="600" height="690" loading="lazy" alt="Street"
+                  <img src="./assets/AI.jpg" width="600" height="690" loading="lazy" alt="Street"
                     class="img-cover">
                 </figure>
 
@@ -437,7 +438,7 @@
                 <h3 class="h4 card-title">Sensors,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-4.jpg" width="600" height="690" loading="lazy" alt="Product"
+                  <img src="./assets/sensors.jpg" width="600" height="690" loading="lazy" alt="Product"
                     class="img-cover">
                 </figure>
 
@@ -450,7 +451,7 @@
                 <h3 class="h4 card-title">Path Planning,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-2.jpg" width="600" height="690" loading="lazy" alt="Fashion"
+                  <img src="./assets/path planning.jpg" width="600" height="690" loading="lazy" alt="Fashion"
                     class="img-cover">
                 </figure>
 
@@ -463,7 +464,7 @@
                 <h3 class="h4 card-title">Mapping,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-5.jpg" width="600" height="690" loading="lazy" alt="Film"
+                  <img src="./assets/Mapping.jpg" width="600" height="690" loading="lazy" alt="Film"
                     class="img-cover">
                 </figure>
 
@@ -476,7 +477,7 @@
                 <h3 class="h4 card-title">Computer Vision,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-6.jpg" width="600" height="690" loading="lazy" alt="Architecture"
+                  <img src="./assets/Computer  Vision.jpg" width="600" height="690" loading="lazy" alt="Architecture"
                     class="img-cover">
                 </figure>
 
@@ -489,7 +490,7 @@
                 <h3 class="h4 card-title">Actuators,</h3>
 
                 <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                  <img src="./assets/images/category-7.jpg" width="600" height="690" loading="lazy" alt="Event"
+                  <img src="./assets/Actuators.jpg" width="600" height="690" loading="lazy" alt="Event"
                     class="img-cover">
                 </figure>
 
@@ -502,7 +503,7 @@
                   <h3 class="h4 card-title">ROS.</h3>
 
                   <figure class="card-banner img-holder" style="--width: 600; --height: 690;">
-                    <img src="./assets/images/category-7.jpg" width="600" height="690" loading="lazy" alt="Event"
+                    <img src="./assets/ROS.webp" width="600" height="690" loading="lazy" alt="Event"
                       class="img-cover">
                   </figure>
 
@@ -577,7 +578,7 @@
         - #Competitions
       -->
 
-      <section class="section service" id="service" aria-labelledby="service-lable">
+      <section class="section service" id="competions" aria-labelledby="service-lable">
 
         <p class="section-subtitle container" id="service-lable">Competitons we go to</p>
 
@@ -704,8 +705,8 @@ the globe.
               <div class="portfolio-card" data-reveal>
 
                 <figure class="card-banner img-holder has-before" style="--width: 700; --height: 605;">
-                  <img src="./assets/auv pic.png" width="700" height="605" loading="lazy" alt="Shoe Promo"
-                    class="img-cover">
+                  <img src="./assets/auv3.328.png" width="700" height="605" loading="lazy" alt="Shoe Promo"
+                    class="img-cover" style="object-fit: cover;">
                 </figure>
 
                 <div class="card-content">
@@ -728,7 +729,7 @@ the globe.
               <div class="portfolio-card" data-reveal>
 
                 <figure class="card-banner img-holder has-before" style="--width: 700; --height: 1091;">
-                  <img src="./assets/auv pic.png" width="700" height="1091" loading="lazy" alt="Wedding Shot"
+                  <img src="./assets/auv3.328.png" width="500" height="700" loading="lazy" alt="AUV"
                     class="img-cover">
                 </figure>
 
@@ -756,16 +757,16 @@ the globe.
               <div class="portfolio-card" data-reveal>
 
                 <figure class="card-banner img-holder has-before" style="--width: 700; --height: 1000;">
-                  <img src="./assets/images/portfolio-3.jpg" width="700" height="1000" loading="lazy" alt="Fashion Show"
+                  <img src="./assets/ocean.avif" width="700" height="1000" loading="lazy" alt="load auv"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h4">
-                    <a href="#" class="card-title">Fashion Show</a>
+                    <a href="#" class="card-title">Water Proofing</a>
                   </h3>
 
-                  <p class="card-tag">Fashion, Model</p>
+                  <p class="card-tag">Work description</p>
                 </div>
 
                 <a href="#" class="btn-icon" aria-label="See more">
@@ -780,16 +781,16 @@ the globe.
               <div class="portfolio-card" data-reveal>
 
                 <figure class="card-banner img-holder has-before" style="--width: 700; --height: 850;">
-                  <img src="./assets/images/portfolio-4.jpg" width="700" height="850" loading="lazy" alt="Jumbo Barger"
+                  <img src="./assets/auv3.328.png" width="700" height="850" loading="lazy" alt="New Chassis"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h4">
-                    <a href="#" class="card-title">Jumbo Barger</a>
+                    <a href="#" class="card-title">New Chassis</a>
                   </h3>
 
-                  <p class="card-tag">Food</p>
+                  <p class="card-tag">Chassis description in one line</p>
                 </div>
 
                 <a href="#" class="btn-icon" aria-label="See more">
@@ -829,7 +830,7 @@ the globe.
         <p class="section-subtitle" data-reveal>Contact Us</p>
 
         <h2 class="h2 section-title" data-reveal>
-          Be a part of the team! Join the waitlist. 
+          Be a part of the team! Join the waitlist (2024 applications open soon). 
         </h2>
 
         <a href="https://www.forms.google.com" class="btn-icon" data-reveal>
@@ -876,7 +877,7 @@ the globe.
 
         </ul>
 
-        <p class="copyright">Made with love by Ayan& Amrit</p>
+        <p class="copyright">Developed with love by Ayan & Amrit</p>
 
       </div>
     </div>
