--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
           </li>
 
           <li class="navbar-item">
+            <a href="team.html" class="navbar-link" data-nav-link>Our Team</a>
+          </li>
+
+          <li class="navbar-item">
             <a href="#contact" class="navbar-link" data-nav-link>Contact us</a>
           </li>
 
