--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
       font-family: "Poppins", sans-serif;
     }
     body {
-      background-color: #f5f5f5;
+      background-color: #262626;
     }
     .row {
       display: flex;
@@ -40,21 +40,21 @@
       width: 100%;
       text-align: center;
       font-size: 3.5em;
-      color: #1f003b;
+      color: #ffffff;
     }
     .card {
-      box-shadow: 0 0 2.4em rgba(25, 0, 58, 0.1);
+      box-shadow: 0 0 2.4em rgba(226, 226, 226, 0.1);
       padding: 3.5em 1em;
       border-radius: 0.6em;
-      color: #1f003b;
+      color: #e2e2e2;
       cursor: pointer;
-      transition: 0.3s;
-      background-color: #ffffff;
+      transition: 0.9s;
+      background-color: #5d5d5d;
     }
     .card .img-container {
       width: 8em;
       height: 8em;
-      background-color: #a993ff;
+      background-color: #14171d;
       padding: 0.5em;
       border-radius: 50%;
       margin: 0 auto 2em auto;
@@ -85,8 +85,8 @@
       font-size: 1.4em;
     }
     .card:hover {
-      background: linear-gradient(#6045ea, #8567f7);
-      color: #ffffff;
+      background: linear-gradient(#292828, #bdbdbd);
+      color: #3e3e3e;
     }
     .card:hover .img-container {
       transform: scale(1.15);
@@ -128,10 +128,8 @@
             <h3>Ben</h3>
             <p>Founder</p>
             <div class="icons">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a href="#">
+              
+              <a href="https://www.linkedin.com/in/ayan-biswa-dutta-065370248/">
                 <i class="fab fa-linkedin"></i>
               </a>
               <a href="#">
